--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Developer
+  uni: JIET, Jodhpur
+  year: June, 2008 &mdash; July, 2012
   # awards:
-  # summary:
+  summary: Graduated as B.Tech in Information Technology from JIET, Jodhpur
